convert string to Long